--- a/backend/sns/email_templates/new_account.html
+++ b/backend/sns/email_templates/new_account.html
@@ -125,12 +125,6 @@
                                                     style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#555555;">You have a new account:</div>
                                             </td>
                                         </tr>
-                                            <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
-                                                <div
-                                                    style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:16px;line-height:1;text-align:left;color:#555555;">Password:
-                                                    {{ password }}</div>
-                                            </td>
-                                        </tr>
                                         <tr>
                                             <td
                                                 align="center"
@@ -149,10 +143,9 @@
                                                             role="presentation"
                                                             style="border:none;border-radius:3px;cursor:auto;padding:10px 25px;background:#414141;"
                                                             valign="middle">
-                                                            <a
-                                                                href="{{ link }}"
-                                                                style="background:#414141;color:#ffffff;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;font-weight:normal;line-height:120%;Margin:0;text-decoration:none;text-transform:none;"
-                                                                target="_blank">Go to Dashboard</a>
+                                                            <form action="{{ link }}" method="post" style="background:#414141;color:#ffffff;font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:13px;font-weight:normal;line-height:120%;Margin:0;text-decoration:none;text-transform:none;">
+                                                                <button type="submit" name="your_name" value="your_value" class="btn-link">Verify email address</button>
+                                                            </form>
                                                         </td>
                                                     </tr>
                                                 </table>
